@@ -1,6 +1,6 @@
 /*
  * HeadsUp Agile
- * Copyright 2009-2012 Heads Up Development Ltd.
+ * Copyright 2009-2015 Heads Up Development Ltd.
  *
  * This program is free software: you can redistribute it and/or modify
  * it under the terms of the GNU Affero General Public License as
@@ -61,6 +61,8 @@ public interface Project
     Date getImported();
 
     Date getUpdated();
+
+    boolean isDisabled();
 
     Set<User> getUsers();
 
