@@ -1,6 +1,6 @@
 <!--
   ~ HeadsUp Agile
-  ~ Copyright 2013 Heads Up Development Ltd.
+  ~ Copyright 2015 Heads Up Development Ltd.
   ~
   ~ This program is free software: you can redistribute it and/or modify
   ~ it under the terms of the GNU Affero General Public License as
@@ -17,14 +17,14 @@
   -->
 
 <html>
-  <body>
-    <wicket:extend>
-      <div style="width:100%;text-align:center">
-        <p class="speechbubble big">Denied</p>
-      </div>
+<body>
+<wicket:extend>
+    <div style="width:100%;text-align:center">
+        <p class="speechbubble big">Disabled</p>
+    </div>
 
-      <p>The current account does not have permission to access the requested page.</p>
+    <p>The requested project is disabled, please speak to your administrator.</p>
 
-    </wicket:extend>
-  </body>
+</wicket:extend>
+</body>
 </html>
