@@ -1,6 +1,6 @@
 /*
  * HeadsUp Agile
- * Copyright 2009-2014 Heads Up Development Ltd.
+ * Copyright 2009-2015 Heads Up Development Ltd.
  *
  * This program is free software: you can redistribute it and/or modify
  * it under the terms of the GNU Affero General Public License as
@@ -393,6 +393,11 @@ public class ResourceManagerImplTest
             public Set<User> getUsers()
             {
                 return null;
+            }
+
+            public boolean isDisabled()
+            {
+                return false;
             }
 
             public String getTypeName()
